--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
   /* Color */
   --white-color: #fff;
-  --black-color: #140a00;
+  --black-color: #000000;
   --blue-color: #045fd4;
   --red-color: #ff0000;
   --gray-dark-color: #909090;
